Add headers for API call
Getting 403 error if API call is made without headers

--- a/notebooks/Preparation (Data Collection using APIs).ipynb
+++ b/notebooks/Preparation (Data Collection using APIs).ipynb
@@ -130,12 +130,16 @@
     "            'format': result_format,\n",
     "            'limit': limit\n",
     "        }\n",
+    "\n",
+    "        headers = {\n",
+    "            \"User-Agent\": \"my-nominatim-app/1.0 (your_email@example.com)\"\n",
+    "        }\n",
     "        \n",
     "        # Convert dictionary to query string\n",
     "        query_string= urlencode(params)\n",
     "        \n",
     "        # Send API request\n",
-    "        r = requests.get(NOMINATIM_SEARCH_URL.format(params=query_string))\n",
+    "        r = requests.get(NOMINATIM_SEARCH_URL.format(params=query_string),headers=headers)\n",
     "\n",
     "        # Return result list in specified format\n",
     "        if result_format.lower() == 'json':\n",
@@ -279,12 +283,16 @@
     "            'format': result_format,\n",
     "            'zoom': zoom\n",
     "        }\n",
+    "\n",
+    "        headers = {\n",
+    "            \"User-Agent\": \"my-nominatim-app/1.0 (your_email@example.com)\"\n",
+    "        }\n",
     "        \n",
     "        # Convert dictionary to query string\n",
     "        query_string= urlencode(params)\n",
     "        \n",
     "        # Send API request\n",
-    "        r = requests.get(NOMINATIM_REVERSE_URL.format(lat=lat, lon=lon, params=query_string))\n",
+    "        r = requests.get(NOMINATIM_REVERSE_URL.format(lat=lat, lon=lon, params=query_string),headers=headers)\n",
     "\n",
     "        # Return result list in specified format\n",
     "        if result_format.lower() == 'json':\n",
