File downloaded manually into folder. Removing code to download the file from here again

--- a/notebooks/Representations (Word2Vec - Data Preparation).ipynb
+++ b/notebooks/Representations (Word2Vec - Data Preparation).ipynb
@@ -177,11 +177,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Download file...')\n",
-    "download_file('https://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz', target_path='data/datasets/imdb-reviews/')\n",
-    "print('Decompress file...')\n",
-    "decompress_file('data/datasets/imdb-reviews/aclImdb_v1.tar.gz', target_path='data/datasets/imdb-reviews/')\n",
-    "print('DONE.')"
+    "# print('Download file...')\n",
+    "# download_file('https://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz', target_path='data/datasets/imdb-reviews/')\n",
+    "# print('Decompress file...')\n",
+    "# decompress_file('data/datasets/imdb-reviews/aclImdb_v1.tar.gz', target_path='data/datasets/imdb-reviews/')\n",
+    "# print('DONE.')"
    ]
   },
   {
@@ -565,9 +565,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py310]",
+   "display_name": "cs5246base",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
